assessQuestion added with calls to judge0

--- a/server/.env
+++ b/server/.env
@@ -4,3 +4,4 @@ PASSWORD=r3vJvp9FfGUXNWGP
 DATABASE=code-puls
 DB_PORT=3306
 HOST=localhost
+x_rapidapi_key=b23ccecf44msh3b556d90d58183bp18a3adjsnc26edf4c9876
