--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "ace-builds": "^1.4.12",
+    "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
     "module-alias": "^2.2.2",
     "react": "^17.0.2",
